Fix button align issue on real mobile device

--- a/0/4/d4.scss
+++ b/0/4/d4.scss
@@ -84,6 +84,7 @@ main {
 .btn {
     width: 50px;
     height: 50px;
+    padding: 0;
     font-size: 25px;
     outline: none;
     border: none;
